--- a/router/lib/schoolhub_router_web/templates/description/main_desc.html.eex
+++ b/router/lib/schoolhub_router_web/templates/description/main_desc.html.eex
@@ -51,3 +51,5 @@ Teachers are able to create isolated spaces for their courses, with the followin
 
 If you have any questions, feel free to contact me on my email address:</br>
 <span><%= link "autodelete@spam.com", to: Routes.description_path(@conn, :contact) %></span></br>
+
+Logo by: Rafael Farias Leão, The Noun Project, cc-by license</br>
