--- a/schoolhub/lib/schoolhub_web/templates/page/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/page/index.html.eex
@@ -1,5 +1,5 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Schoolhub" %></h1>
+  <h1><%= gettext "Welcome to %{name}!", name: "Katedra" %></h1>
   <p><%= get_server_name(@conn) %></p>
 </section>
 
