replace name in description

--- a/router/lib/schoolhub_router_web/templates/description/main_desc.html.eex
+++ b/router/lib/schoolhub_router_web/templates/description/main_desc.html.eex
@@ -1,4 +1,4 @@
-Schoolhub is a social paltform intended to facilitate communication between teachers and their students.</br>
+Katedra is a social paltform intended to facilitate communication between teachers and their students.</br>
 
 Teachers are able to create isolated spaces for their courses, with the following functionalities, as for the moment:
 
