--- a/router/lib/schoolhub_router_web/templates/server/delete.html.eex
+++ b/router/lib/schoolhub_router_web/templates/server/delete.html.eex
@@ -8,7 +8,7 @@
   <input type="email" id="email" name="email" required="required">
   
   <div>
-    <%= submit "Submit" %>
+    <%= submit "Unsubscribe" %>
   </div>
 <% end %>
 
